--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "dependencies": {
     "bluebird": "^3.3.4",
     "cron": "^1.1.0",
+    "jquery": "^3.1.1",
     "request": "^2.70.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "xhr": "^2.2.2"
   },
   "devDependencies": {
     "babel-cli": "^6.7.5",
