--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "cron": "^1.1.0",
     "jquery": "^3.1.1",
     "request": "^2.70.0",
-    "underscore": "^1.8.3",
-    "xhr": "^2.2.2"
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "babel-cli": "^6.7.5",
